--- a/WalletWasabi.Fluent/Styles/Separator.axaml
+++ b/WalletWasabi.Fluent/Styles/Separator.axaml
@@ -8,7 +8,7 @@
 
     <Style Selector="Separator">
         <Setter Property="Height" Value="0.55" />
-        <Setter Property="Background" Value="{DynamicResource SeparatorBackgroundBrush}" />
+        <Setter Property="Background" Value="{ThemeResource SeparatorBackgroundBrush}" />
         <Setter Property="Opacity" Value="0.5" />
     </Style>
 </Styles>
