--- a/WalletWasabi.Fluent/Views/Login/PasswordFinder/PasswordFoundView.axaml
+++ b/WalletWasabi.Fluent/Views/Login/PasswordFinder/PasswordFoundView.axaml
@@ -43,7 +43,7 @@
                  HorizontalAlignment="Center" DockPanel.Dock="Left" PasswordChar="•" Classes="revealPasswordButton" />
       </StackPanel>
       <Viewbox MaxHeight="150" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <PathIcon Data="{StaticResource checkmark_filled}" Foreground="{DynamicResource SystemAccentColor}" />
+        <PathIcon Data="{StaticResource checkmark_filled}" Foreground="{ThemeResource SystemAccentColor}" />
       </Viewbox>
     </DockPanel>
   </c:ContentArea>
