--- a/WalletWasabi.Fluent/Views/Login/PasswordFinder/SearchPasswordView.axaml
+++ b/WalletWasabi.Fluent/Views/Login/PasswordFinder/SearchPasswordView.axaml
@@ -27,7 +27,7 @@
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Margin" Value="0 0 0 -2"/>
-            <Setter Property="Foreground" Value="{DynamicResource SystemAccentColor}"/>
+            <Setter Property="Foreground" Value="{ThemeResource SystemAccentColor}"/>
           </Style>
         </StackPanel.Styles>
         <TextBlock Text="The search will finish in " IsVisible="{Binding RemainingTimeReceived}"/>
