--- a/WalletWasabi.Fluent/Views/StatusBar/StatusBar.axaml
+++ b/WalletWasabi.Fluent/Views/StatusBar/StatusBar.axaml
@@ -25,7 +25,7 @@
       </Style.Animations>
     </Style>
     <Style Selector="FlyoutPresenter">
-      <Setter Property="Background" Value="{DynamicResource SystemControlTransientBackgroundBrush}"/>
+      <Setter Property="Background" Value="{ThemeResource SystemControlTransientBackgroundBrush}"/>
       <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled"/>
       <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
     </Style>
@@ -36,7 +36,7 @@
     </Interaction.Behaviors>
     <FlyoutBase.AttachedFlyout>
       <Flyout Placement="Top" ShowMode="TransientWithDismissOnPointerMoveAway">
-        <StackPanel TextBlock.Foreground="{DynamicResource TextControlForeground}"
+        <StackPanel TextBlock.Foreground="{ThemeResource TextControlForeground}"
                     TextBlock.FontSize="14"
                     MaxWidth="160"
                     ClipToBounds="False"
