--- a/WalletWasabi.Fluent/Views/Wallets/Send/SendSuccessView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/SendSuccessView.axaml
@@ -15,7 +15,7 @@
       <TextBlock Text="Your transaction has been successfully sent." DockPanel.Dock="Bottom" TextAlignment="Center" TextWrapping="Wrap"/>
 
       <Viewbox MaxHeight="150" Margin="40">
-        <PathIcon Data="{StaticResource copy_confirmed}" Opacity="0.6" Foreground="{DynamicResource SystemAccentColor}"/>
+        <PathIcon Data="{StaticResource copy_confirmed}" Opacity="0.6" Foreground="{ThemeResource SystemAccentColor}"/>
       </Viewbox>
     </DockPanel>
   </c:ContentArea>
