--- a/WalletWasabi.Fluent/Controls/Dialog.axaml
+++ b/WalletWasabi.Fluent/Controls/Dialog.axaml
@@ -16,7 +16,7 @@
                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
             <Border Name="PART_Border"
-                    Background="{DynamicResource RegionColor}"
+                    Background="{ThemeResource RegionColor}"
                     MaxWidth="{TemplateBinding MaxContentWidth}" MaxHeight="{TemplateBinding MaxContentHeight}">
               <Panel Name="PART_Dismiss">
                 <ContentPresenter Name="PART_ContentPresenter"
@@ -41,7 +41,7 @@
         <DoubleTransition Property="Opacity" Duration="0:0:0.25" />
       </Transitions>
     </Setter>
-    <Setter Property="Background" Value="{DynamicResource DialogOverlayColor}"/>
+    <Setter Property="Background" Value="{ThemeResource DialogOverlayColor}"/>
     <Setter Property="IsHitTestVisible" Value="False"/>
     <Setter Property="Opacity" Value="0"/>
   </Style>
@@ -58,7 +58,7 @@
   <Style Selector="c|Dialog /template/ Border#PART_Border">
     <Setter Property="Margin" Value="40"/>
     <Setter Property="CornerRadius" Value="4"/>
-    <Setter Property="BoxShadow" Value="{DynamicResource DialogBoxShadow}"/>
+    <Setter Property="BoxShadow" Value="{ThemeResource DialogBoxShadow}"/>
   </Style>
   <Style Selector="c|Dialog /template/ ContentPresenter#PART_ContentPresenter">
     <Setter Property="MinWidth" Value="382" />
@@ -100,7 +100,7 @@
     <Setter Property="Margin" Value="0" />
   </Style>
   <Style Selector="c|Dialog[FullScreenEnabled=True] /template/ Panel#PART_Overlay">
-    <Setter Property="Background" Value="{DynamicResource RegionColor}"/>
+    <Setter Property="Background" Value="{ThemeResource RegionColor}"/>
   </Style>
   <Style Selector="c|Dialog[FullScreenEnabled=True] /template/ ContentPresenter#PART_ContentPresenter">
     <Setter Property="Margin" Value="16 0 16 16" />
