--- a/WalletWasabi.Fluent/Controls/NavBarItem.axaml
+++ b/WalletWasabi.Fluent/Controls/NavBarItem.axaml
@@ -12,7 +12,7 @@
 
   <Style Selector="c|NavBarItem">
     <Setter Property="Background" Value="Transparent" />
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemForegroundBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemForegroundBrush}" />
   </Style>
 
   <Style Selector="c|NavBarItem">
@@ -62,7 +62,7 @@
   </Style>
 
   <Style Selector="c|NavBarItem /template/ Border#Indicator">
-    <Setter Property="Background" Value="{DynamicResource NavBarAccentColor}" />
+    <Setter Property="Background" Value="{ThemeResource NavBarAccentColor}" />
     <Setter Property="Opacity" Value="0" />
     <Setter Property="RenderTransformOrigin" Value="50%,0%" />
     <Setter Property="RenderTransform" Value="scaleY(0)" />
@@ -70,28 +70,28 @@
 
   <Style Selector="c|NavBarItem /template/ ContentPresenter#PART_ContentPresenter">
     <Setter Property="TextBlock.FontWeight" Value="Normal" />
-    <Setter Property="TextBlock.FontSize" Value="{DynamicResource ControlContentThemeFontSize}" />
+    <Setter Property="TextBlock.FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
   </Style>
 
   <!-- Disabled State -->
   <Style Selector="c|NavBarItem:disabled /template/ ContentPresenter#PART_ContentPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemDisabledBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemDisabledBrush}" />
   </Style>
 
   <!-- PointerOver State -->
   <Style Selector="c|NavBarItem:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemPointerOverBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemPointerOverBrush}" />
   </Style>
   <Style Selector="c|NavBarItem:pointerover /template/ Border#Indicator_Backdrop">
-    <Setter Property="Background" Value="{DynamicResource NavBarItemPointerOverBackgroundBrush}" />
+    <Setter Property="Background" Value="{ThemeResource NavBarItemPointerOverBackgroundBrush}" />
   </Style>
 
   <!-- Pressed State -->
   <Style Selector="c|NavBarItem:pressed /template/ Border#Indicator">
-    <Setter Property="Background" Value="{DynamicResource NavBarItemPressedAccentColor}" />
+    <Setter Property="Background" Value="{ThemeResource NavBarItemPressedAccentColor}" />
   </Style>
   <Style Selector="c|NavBarItem:pressed /template/ ContentPresenter#PART_ContentPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemPressedBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemPressedBrush}" />
   </Style>
   <Style Selector="c|NavBarItem:pressed">
     <Setter Property="RenderTransform" Value="scale(0.98)" />
@@ -104,27 +104,27 @@
     <Setter Property="RenderTransform" Value="scaleY(1)" />
   </Style>
   <Style Selector="c|NavBarItem:selected /template/ ContentPresenter#PART_ContentPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemSelectedBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemSelectedBrush}" />
   </Style>
 
   <!-- Selected Unfocused State -->
   <Style Selector="c|NavBarItem:selected:not(:focus) /template/ ContentPresenter#PART_ContentPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemSelectedUnfocusedBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemSelectedUnfocusedBrush}" />
   </Style>
 
   <!-- Selected PointerOver State -->
   <Style Selector="c|NavBarItem:selected:pointerover /template/ Border">
-    <Setter Property="BorderBrush" Value="{DynamicResource NavBarAccentColor}" />
+    <Setter Property="BorderBrush" Value="{ThemeResource NavBarAccentColor}" />
   </Style>
   <Style Selector="c|NavBarItem:selected:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemSelectedPointerOverBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemSelectedPointerOverBrush}" />
   </Style>
 
   <!-- Selected Pressed State -->
   <Style Selector="c|NavBarItem:selected:pressed /template/ Border">
-    <Setter Property="BorderBrush" Value="{DynamicResource NavBarAccentColorPressed}" />
+    <Setter Property="BorderBrush" Value="{ThemeResource NavBarAccentColorPressed}" />
   </Style>
   <Style Selector="c|NavBarItem:selected:pressed /template/ ContentPresenter#PART_ContentPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource NavBarItemSelectedPressedBrush}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource NavBarItemSelectedPressedBrush}" />
   </Style>
 </Styles>
