--- a/WalletWasabi.Fluent/Controls/NavBarTreeItem.axaml
+++ b/WalletWasabi.Fluent/Controls/NavBarTreeItem.axaml
@@ -18,11 +18,11 @@
   <Style Selector="c|NavBarTreeItem">
     <Style.Resources />
     <Setter Property="Padding" Value="{StaticResource ListBoxItemPadding}" />
-    <Setter Property="Background" Value="{DynamicResource TreeViewItemBackground}" />
-    <Setter Property="BorderBrush" Value="{DynamicResource TreeViewItemBorderBrush}" />
+    <Setter Property="Background" Value="{ThemeResource TreeViewItemBackground}" />
+    <Setter Property="BorderBrush" Value="{ThemeResource TreeViewItemBorderBrush}" />
     <Setter Property="BorderThickness" Value="0" />
-    <Setter Property="Foreground" Value="{DynamicResource TreeViewItemForeground}" />
-    <Setter Property="MinHeight" Value="{DynamicResource TreeViewItemMinHeight}" />
+    <Setter Property="Foreground" Value="{ThemeResource TreeViewItemForeground}" />
+    <Setter Property="MinHeight" Value="{ThemeResource TreeViewItemMinHeight}" />
     <Setter Property="VerticalAlignment" Value="Center" />
     <Setter Property="Template">
       <ControlTemplate>
@@ -70,7 +70,7 @@
   </Style>
 
   <Style Selector="c|NavBarTreeItem /template/ Border#PART_LayoutRoot Border#Indicator">
-    <Setter Property="Background" Value="{DynamicResource SystemAccentColor}"/>
+    <Setter Property="Background" Value="{ThemeResource SystemAccentColor}"/>
     <Setter Property="Opacity" Value="0" />
     <Setter Property="RenderTransformOrigin" Value="50%,0%" />
     <Setter Property="RenderTransform" Value="scaleY(0)" />
@@ -78,18 +78,18 @@
 
   <!--  PointerOver state  -->
   <Style Selector="c|NavBarTreeItem /template/ Border#PART_LayoutRoot:pointerover > ContentPresenter#PART_HeaderPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TreeViewItemForegroundPointerOver}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource TreeViewItemForegroundPointerOver}" />
   </Style>
   <Style Selector="c|NavBarTreeItem /template/ Border#PART_LayoutRoot:pointerover Border#Indicator_Backdrop">
-    <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListLowBrush}"/>
+    <Setter Property="Background" Value="{ThemeResource SystemControlHighlightListLowBrush}"/>
   </Style>
 
   <!--  Pressed state  -->
   <Style Selector="c|NavBarTreeItem:pressed /template/ Border#Indicator">
-    <Setter Property="Background" Value="{DynamicResource SystemAccentColorLight1}"/>
+    <Setter Property="Background" Value="{ThemeResource SystemAccentColorLight1}"/>
   </Style>
   <Style Selector="c|NavBarTreeItem:pressed /template/ Border#PART_LayoutRoot:pointerover > ContentPresenter#PART_HeaderPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TreeViewItemForegroundPressed}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource TreeViewItemForegroundPressed}" />
   </Style>
   <Style Selector="c|NavBarTreeItem /template/ Border#PART_LayoutRoot">
     <Setter Property="RenderTransform" Value="none" />
@@ -105,7 +105,7 @@
 
   <!--  Disabled state  -->
   <Style Selector="c|NavBarTreeItem:disabled /template/ Border#PART_LayoutRoot > ContentPresenter#PART_HeaderPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TreeViewItemForegroundDisabled}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource TreeViewItemForegroundDisabled}" />
   </Style>
 
   <!--  Selected state  -->
@@ -115,22 +115,22 @@
     <Setter Property="RenderTransform" Value="scaleY(1)" />
   </Style>
   <Style Selector="c|NavBarTreeItem:selected /template/ Border#PART_LayoutRoot > ContentPresenter#PART_HeaderPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TreeViewItemForegroundSelected}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource TreeViewItemForegroundSelected}" />
   </Style>
 
   <!--  Selected PointerOver state  -->
   <Style Selector="c|NavBarTreeItem:selected /template/ Border#PART_LayoutRoot:pointerover > ContentPresenter#PART_HeaderPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TreeViewItemForegroundSelectedPointerOver}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource TreeViewItemForegroundSelectedPointerOver}" />
   </Style>
 
   <!--  Selected Pressed state  -->
   <Style Selector="c|NavBarTreeItem:pressed:selected /template/ Border#PART_LayoutRoot:pointerover > ContentPresenter#PART_HeaderPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TreeViewItemForegroundSelectedPressed}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource TreeViewItemForegroundSelectedPressed}" />
   </Style>
 
   <!--  Disabled Selected state  -->
   <Style Selector="c|NavBarTreeItem:disabled:selected /template/ Border#PART_LayoutRoot > ContentPresenter#PART_HeaderPresenter">
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource TreeViewItemForegroundSelectedDisabled}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource TreeViewItemForegroundSelectedDisabled}" />
   </Style>
 
   <!--  ExpandCollapseChevron Group states  -->
