--- a/WalletWasabi.Fluent/Controls/TagsBox.axaml
+++ b/WalletWasabi.Fluent/Controls/TagsBox.axaml
@@ -22,14 +22,14 @@
         <Thickness x:Key="TagsBoxBorderPadding">4,4,0,0</Thickness>
     </Styles.Resources>
     <Style Selector="c|TagsBox">
-        <Setter Property="Foreground" Value="{DynamicResource TextControlForeground}" />
-        <Setter Property="Background" Value="{DynamicResource TextControlBackground}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource TextControlBorderBrush}" />
-        <Setter Property="BorderThickness" Value="{DynamicResource TextControlBorderThemeThickness}" />
-        <Setter Property="FontSize" Value="{DynamicResource ControlContentThemeFontSize}" />
-        <Setter Property="MinHeight" Value="{DynamicResource TextControlThemeMinHeight}" />
-        <Setter Property="MinWidth" Value="{DynamicResource TextControlThemeMinWidth}" />
-        <Setter Property="Padding" Value="{DynamicResource TagsBoxBorderPadding}" />
+        <Setter Property="Foreground" Value="{ThemeResource TextControlForeground}" />
+        <Setter Property="Background" Value="{ThemeResource TextControlBackground}" />
+        <Setter Property="BorderBrush" Value="{ThemeResource TextControlBorderBrush}" />
+        <Setter Property="BorderThickness" Value="{ThemeResource TextControlBorderThemeThickness}" />
+        <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
+        <Setter Property="MinHeight" Value="{ThemeResource TextControlThemeMinHeight}" />
+        <Setter Property="MinWidth" Value="{ThemeResource TextControlThemeMinWidth}" />
+        <Setter Property="Padding" Value="{ThemeResource TagsBoxBorderPadding}" />
         <Setter Property="Cursor" Value="IBeam" />
         <Setter Property="Template">
             <ControlTemplate>
@@ -137,22 +137,22 @@
   </Style>
 
     <Style Selector="c|TagsBox:pointerover /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource TextControlBorderBrushPointerOver}" />
-        <Setter Property="Background" Value="{DynamicResource TextControlBackgroundPointerOver}" />
+        <Setter Property="BorderBrush" Value="{ThemeResource TextControlBorderBrushPointerOver}" />
+        <Setter Property="Background" Value="{ThemeResource TextControlBackgroundPointerOver}" />
     </Style>
 
     <Style Selector="c|TagsBox:focus-within">
-        <Setter Property="Foreground" Value="{DynamicResource TextControlForegroundFocused}" />
+        <Setter Property="Foreground" Value="{ThemeResource TextControlForegroundFocused}" />
     </Style>
 
     <Style Selector="c|TagsBox:focus-within /template/ Border#PART_Border">
-        <Setter Property="Background" Value="{DynamicResource TextControlBackgroundFocused}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource TextControlBorderBrushFocused}" />
-        <Setter Property="BorderThickness" Value="{DynamicResource TextControlBorderThemeThicknessFocused}" />
+        <Setter Property="Background" Value="{ThemeResource TextControlBackgroundFocused}" />
+        <Setter Property="BorderBrush" Value="{ThemeResource TextControlBorderBrushFocused}" />
+        <Setter Property="BorderThickness" Value="{ThemeResource TextControlBorderThemeThicknessFocused}" />
     </Style>
 
     <Style Selector="c|TagsBox:error /template/ Border#PART_Border">
-        <Setter Property="BorderBrush" Value="{DynamicResource SystemControlErrorTextForegroundBrush}" />
+        <Setter Property="BorderBrush" Value="{ThemeResource SystemControlErrorTextForegroundBrush}" />
     </Style>
 
     <Style Selector="c|TagsBox:readonly /template/ Border#PART_Border">
@@ -205,16 +205,16 @@
                            IsLightDismissEnabled="True"
                            PlacementTarget="{TemplateBinding}">
                         <Border Name="PART_SuggestionsContainer"
-                                Padding="{DynamicResource AutoCompleteListMargin}"
-                                BorderThickness="{DynamicResource AutoCompleteListBorderThemeThickness}"
-                                BorderBrush="{DynamicResource AutoCompleteBoxSuggestionsListBorderBrush}"
-                                Background="{DynamicResource AutoCompleteBoxSuggestionsListBackground}"
-                                CornerRadius="{DynamicResource OverlayCornerRadius}">
+                                Padding="{ThemeResource AutoCompleteListMargin}"
+                                BorderThickness="{ThemeResource AutoCompleteListBorderThemeThickness}"
+                                BorderBrush="{ThemeResource AutoCompleteBoxSuggestionsListBorderBrush}"
+                                Background="{ThemeResource AutoCompleteBoxSuggestionsListBackground}"
+                                CornerRadius="{ThemeResource OverlayCornerRadius}">
                             <ListBox Name="PART_SelectingItemsControl"
                                      BorderThickness="0"
                                      Background="Transparent"
                                      ItemTemplate="{TemplateBinding ItemTemplate}"
-                                     Margin="{DynamicResource AutoCompleteListPadding}" />
+                                     Margin="{ThemeResource AutoCompleteListPadding}" />
                         </Border>
                     </Popup>
                 </Grid>
