--- a/WalletWasabi.Fluent/Controls/TileButton.axaml
+++ b/WalletWasabi.Fluent/Controls/TileButton.axaml
@@ -41,8 +41,8 @@
   </Style>
 
   <Style Selector="c|TileButton /template/ Border#PART_Border">
-    <Setter Property="CornerRadius" Value="{DynamicResource ControlCornerRadius}" />
-    <Setter Property="BoxShadow" Value="{DynamicResource OptionButtonShadow}" />
+    <Setter Property="CornerRadius" Value="{ThemeResource ControlCornerRadius}" />
+    <Setter Property="BoxShadow" Value="{ThemeResource OptionButtonShadow}" />
   </Style>
 
   <Style Selector="c|TileButton">
@@ -50,20 +50,20 @@
     <Setter Property="Height" Value="150"/>
     <Setter Property="ClipToBounds" Value="False" />
     <Setter Property="BorderThickness" Value="0" />
-    <Setter Property="Background" Value="{DynamicResource TileRegionColor}" />
-    <Setter Property="BorderBrush" Value="{DynamicResource OptionButtonBorderBrush}" />
+    <Setter Property="Background" Value="{ThemeResource TileRegionColor}" />
+    <Setter Property="BorderBrush" Value="{ThemeResource OptionButtonBorderBrush}" />
   </Style>
 
   <!-- Pointerover -->
   <Style Selector="c|TileButton:pointerover">
-    <Setter Property="Background" Value="{DynamicResource ButtonBackgroundPointerOver}" />
-    <Setter Property="BorderBrush" Value="{DynamicResource ButtonBorderBrushPointerOver}" />
-    <Setter Property="Foreground" Value="{DynamicResource ButtonForegroundPointerOver}" />
+    <Setter Property="Background" Value="{ThemeResource ButtonBackgroundPointerOver}" />
+    <Setter Property="BorderBrush" Value="{ThemeResource ButtonBorderBrushPointerOver}" />
+    <Setter Property="Foreground" Value="{ThemeResource ButtonForegroundPointerOver}" />
   </Style>
 
   <!-- Pressed -->
   <Style Selector="c|TileButton:pressed">
-    <Setter Property="Foreground" Value="{DynamicResource ButtonForegroundPressed}" />
+    <Setter Property="Foreground" Value="{ThemeResource ButtonForegroundPressed}" />
   </Style>
 
   <Style Selector="c|TileButton:pressed">
@@ -73,7 +73,7 @@
   <!-- Action style -->
   <Style Selector="c|TileButton.action">
     <Setter Property="BorderThickness" Value="0 0 0 2" />
-    <Setter Property="BorderBrush" Value="{DynamicResource SystemAccentColor}" />
+    <Setter Property="BorderBrush" Value="{ThemeResource SystemAccentColor}" />
   </Style>
 
 </Styles>
