--- a/WalletWasabi.Fluent/CrashReport/Views/CrashReportWindow.axaml
+++ b/WalletWasabi.Fluent/CrashReport/Views/CrashReportWindow.axaml
@@ -53,7 +53,7 @@
     </controls:ContentArea>
     <Viewbox Width="300" Height="300" Opacity="0.1" VerticalAlignment="Center"
              HorizontalAlignment="Right" IsHitTestVisible="False">
-      <ContentControl Template="{DynamicResource wasabi_logo_dynamic}" />
+      <ContentControl Template="{ThemeResource wasabi_logo_dynamic}" />
     </Viewbox>
   </Panel>
 </Window>
