--- a/WalletWasabi.Fluent/Styles/BalanceLineChart.axaml
+++ b/WalletWasabi.Fluent/Styles/BalanceLineChart.axaml
@@ -10,12 +10,12 @@
     <Setter Property="AreaFill">
       <LinearGradientBrush StartPoint="50%,0%" EndPoint="50%,100%" Opacity="0.2">
         <LinearGradientBrush.GradientStops>
-          <GradientStop Offset="0.0" Color="{DynamicResource LineChartAreaGradientStartStopColor}" />
-          <GradientStop Offset="1.0" Color="{DynamicResource LineChartAreaGradientEndStopColor}" />
+          <GradientStop Offset="0.0" Color="{ThemeResource LineChartAreaGradientStartStopColor}" />
+          <GradientStop Offset="1.0" Color="{ThemeResource LineChartAreaGradientEndStopColor}" />
         </LinearGradientBrush.GradientStops>
       </LinearGradientBrush>
     </Setter>
-    <Setter Property="AreaStroke" Value="{DynamicResource LineChartLineColor}" />
+    <Setter Property="AreaStroke" Value="{ThemeResource LineChartLineColor}" />
   </Style>
   <!-- LineChart Border -->
   <Style Selector="c|LineChart.border">
@@ -34,7 +34,7 @@
   </Style>
   <!-- LineChart XAxis Labels -->
   <Style Selector="c|LineChart.xAxisLabels">
-    <Setter Property="XAxisLabelForeground" Value="{DynamicResource TextForegroundColor}" />
+    <Setter Property="XAxisLabelForeground" Value="{ThemeResource TextForegroundColor}" />
     <Setter Property="XAxisLabelAngle" Value="0" />
     <Setter Property="XAxisLabelOffset" Value="0,10" />
     <Setter Property="XAxisLabelAlignment" Value="Auto" />
@@ -45,7 +45,7 @@
   <Style Selector="c|LineChart.yAxis">
     <Setter Property="YAxisOffset" Value="0,0" />
     <Setter Property="YAxisOpacity" Value="1.0" />
-    <Setter Property="YAxisStroke" Value="{DynamicResource TextForegroundColor}" />
+    <Setter Property="YAxisStroke" Value="{ThemeResource TextForegroundColor}" />
     <Setter Property="YAxisStrokeThickness" Value="0" />
     <Setter Property="YAxisArrowSize" Value="3.5" />
     <Setter Property="YAxisMinViableWidth" Value="0" />
@@ -53,7 +53,7 @@
   </Style>
   <!-- LineChart YAxis Labels -->
   <Style Selector="c|LineChart.yAxisLabels">
-    <Setter Property="YAxisLabelForeground" Value="{DynamicResource TextForegroundColor}" />
+    <Setter Property="YAxisLabelForeground" Value="{ThemeResource TextForegroundColor}" />
     <Setter Property="YAxisLabelAngle" Value="0" />
     <Setter Property="YAxisLabelOffset" Value="-10,0" />
     <Setter Property="YAxisLabelAlignment" Value="Auto" />
