--- a/WalletWasabi.Fluent/Styles/Button.axaml
+++ b/WalletWasabi.Fluent/Styles/Button.axaml
@@ -18,18 +18,18 @@
 
   <Style Selector="Button.action /template/ ContentPresenter">
     <Setter Property="Cursor" Value="Hand" />
-    <Setter Property="Background" Value="{DynamicResource ActionButtonBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource ActionButtonBackgroundColor}" />
     <Setter Property="Padding" Value="{StaticResource ActionButtonPadding}" />
-    <Setter Property="TextBlock.Foreground" Value="{DynamicResource ActionButtonForegroundColor}" />
+    <Setter Property="TextBlock.Foreground" Value="{ThemeResource ActionButtonForegroundColor}" />
   </Style>
   <Style Selector="Button.action:pointerover /template/ ContentPresenter">
-    <Setter Property="Background" Value="{DynamicResource ActionButtonPointerOverBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource ActionButtonPointerOverBackgroundColor}" />
   </Style>
   <Style Selector="Button.action:pressed /template/ ContentPresenter">
-    <Setter Property="Background" Value="{DynamicResource ActionButtonPressedBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource ActionButtonPressedBackgroundColor}" />
   </Style>
   <Style Selector="Button.action:disabled /template/ ContentPresenter">
-    <Setter Property="Background" Value="{DynamicResource ActionButtonDisabledBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource ActionButtonDisabledBackgroundColor}" />
   </Style>
 
 
@@ -42,7 +42,7 @@
   </Style>
 
   <Style Selector="Button.plain /template/ ContentPresenter">
-    <Setter Property="Background" Value="{DynamicResource InvisibleButtonBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource InvisibleButtonBackgroundColor}" />
   </Style>
 
   <Style Selector="Button.function">
@@ -51,10 +51,10 @@
     <Setter Property="Cursor" Value="Hand" />
   </Style>
   <Style Selector="Button.function PathIcon">
-    <Setter Property="Foreground" Value="{DynamicResource SystemAccentColor}" />
+    <Setter Property="Foreground" Value="{ThemeResource SystemAccentColor}" />
   </Style>
   <Style Selector="Button.function:disabled PathIcon">
-    <Setter Property="Foreground" Value="{DynamicResource ButtonForegroundDisabled}" />
+    <Setter Property="Foreground" Value="{ThemeResource ButtonForegroundDisabled}" />
   </Style>
   <Style Selector="Button.function:disabled /template/ ContentPresenter#PART_ContentPresenter">
     <Setter Property="Background" Value="Transparent" />
@@ -65,13 +65,13 @@
     <Setter Property="Cursor" Value="Hand" />
   </Style>
   <Style Selector="Button.invisible /template/ ContentPresenter">
-    <Setter Property="Background" Value="{DynamicResource InvisibleButtonBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource InvisibleButtonBackgroundColor}" />
   </Style>
   <Style Selector="Button.invisible:pointerover /template/ ContentPresenter">
-    <Setter Property="Background" Value="{DynamicResource InvisibleButtonPointerOverBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource InvisibleButtonPointerOverBackgroundColor}" />
   </Style>
   <Style Selector="Button.invisible:pressed /template/ ContentPresenter">
-    <Setter Property="Background" Value="{DynamicResource InvisibleButtonPressedBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource InvisibleButtonPressedBackgroundColor}" />
   </Style>
 
   <Style Selector="Button.labelFlyout">
@@ -86,7 +86,7 @@
     <Setter Property="Cursor" Value="Hand" />
     <Setter Property="BorderThickness" Value="1" />
     <Setter Property="BorderBrush" Value="{StaticResource TagsBoxBorderBrush}" />
-    <Setter Property="Background" Value="{DynamicResource InvisibleButtonBackgroundColor}" />
+    <Setter Property="Background" Value="{ThemeResource InvisibleButtonBackgroundColor}" />
     <Setter Property="CornerRadius" Value="2" />
   </Style>
   <Style Selector="Button.labelFlyout:pointerover /template/ ContentPresenter">
