--- a/WalletWasabi.Fluent/Styles/Slider.axaml
+++ b/WalletWasabi.Fluent/Styles/Slider.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <Style Selector="Slider /template/ Thumb:pointerover">
     <Setter Property="BorderThickness" Value="2" />
-    <Setter Property="BorderBrush" Value="{DynamicResource SliderThumbBorderBrushPointerOver}" />
+    <Setter Property="BorderBrush" Value="{ThemeResource SliderThumbBorderBrushPointerOver}" />
   </Style>
   <Style Selector="Slider /template/ Thumb">
     <Setter Property="Transitions">
