--- a/WalletWasabi.Fluent/Views/HelpAndSupport/AboutView.axaml
+++ b/WalletWasabi.Fluent/Views/HelpAndSupport/AboutView.axaml
@@ -13,7 +13,7 @@
   <UserControl.Styles>
     <Style Selector="TextBlock.Hyperlink">
       <Setter Property="TextDecorations" Value="Underline" />
-      <Setter Property="Foreground" Value="{DynamicResource SystemAccentColor}" />
+      <Setter Property="Foreground" Value="{ThemeResource SystemAccentColor}" />
       <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
     <Style Selector="TextBlock.LinkSeparatorPadding">
@@ -26,11 +26,11 @@
       <DockPanel LastChildFill="True">
         <Viewbox DockPanel.Dock="Top" Margin="25,25,25,50" Width="112" VerticalAlignment="Center"
                  HorizontalAlignment="Center">
-          <ContentControl Template="{DynamicResource wasabi_logo_dynamic}" />
+          <ContentControl Template="{ThemeResource wasabi_logo_dynamic}" />
         </Viewbox>
         <Viewbox ClipToBounds="False" DockPanel.Dock="Top" Width="220" Margin="0,0,0,50" VerticalAlignment="Center"
                  HorizontalAlignment="Center">
-          <ContentControl Template="{DynamicResource wasabi_logo_text_dynamic}"
+          <ContentControl Template="{ThemeResource wasabi_logo_text_dynamic}"
                           VerticalAlignment="Center" ClipToBounds="False" />
         </Viewbox>
         <DockPanel>
