--- a/WalletWasabi.Fluent/Views/HelpAndSupport/LinkView.axaml
+++ b/WalletWasabi.Fluent/Views/HelpAndSupport/LinkView.axaml
@@ -11,7 +11,7 @@
   <UserControl.Styles>
     <Style Selector="TextBlock.Hyperlink">
       <Setter Property="TextDecorations" Value="Underline" />
-      <Setter Property="Foreground" Value="{DynamicResource SystemAccentColor}" />
+      <Setter Property="Foreground" Value="{ThemeResource SystemAccentColor}" />
       <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
   </UserControl.Styles>
