--- a/WalletWasabi.Fluent/Views/MainView.axaml
+++ b/WalletWasabi.Fluent/Views/MainView.axaml
@@ -29,9 +29,9 @@
           <ExperimentalAcrylicBorder DockPanel.Dock="Left" IsHitTestVisible="False">
             <ExperimentalAcrylicBorder.Material>
               <ExperimentalAcrylicMaterial BackgroundSource="Digger"
-                                           TintColor="{DynamicResource NavBarTintColor}"
+                                           TintColor="{ThemeResource NavBarTintColor}"
                                            TintOpacity="1"
-                                           FallbackColor="{DynamicResource AcrylicFallbackColor}"
+                                           FallbackColor="{ThemeResource AcrylicFallbackColor}"
                                            MaterialOpacity="0.8" />
             </ExperimentalAcrylicBorder.Material>
           </ExperimentalAcrylicBorder>
@@ -40,7 +40,7 @@
       </SplitView.Pane>
       <Panel>
         <DockPanel>
-          <Panel Background="{DynamicResource RegionColor}" DockPanel.Dock="Bottom" VerticalAlignment="Bottom"
+          <Panel Background="{ThemeResource RegionColor}" DockPanel.Dock="Bottom" VerticalAlignment="Bottom"
                  Height="32">
             <statusBar:StatusBar DataContext="{Binding StatusBar}" />
           </Panel>
@@ -54,7 +54,7 @@
                 <Setter Property="Margin" Value="31 36 31 0" />
               </Style>
             </Panel.Styles>
-            <Border Background="{DynamicResource RegionColor}" IsHitTestVisible="False" />
+            <Border Background="{ThemeResource RegionColor}" IsHitTestVisible="False" />
             <ContentControl ClipToBounds="False" Content="{Binding MainScreen.CurrentPage}" />
           </Panel>
         </DockPanel>
@@ -63,9 +63,9 @@
     <ExperimentalAcrylicBorder DockPanel.Dock="Left" IsHitTestVisible="False" IsVisible="{Binding IsOobeBackgroundVisible}">
       <ExperimentalAcrylicBorder.Material>
         <ExperimentalAcrylicMaterial BackgroundSource="Digger"
-                                     TintColor="{DynamicResource SystemAltHighColor}"
+                                     TintColor="{ThemeResource SystemAltHighColor}"
                                      TintOpacity="0.8"
-                                     FallbackColor="{DynamicResource AcrylicFallbackColor}"
+                                     FallbackColor="{ThemeResource AcrylicFallbackColor}"
                                      MaterialOpacity="0.2" />
       </ExperimentalAcrylicBorder.Material>
       <Viewbox Stretch="Uniform" ClipToBounds="False" >
@@ -87,7 +87,7 @@
               HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
       <c:Dialog.Styles>
         <Style Selector="c|Dialog /template/ Panel#PART_Overlay">
-          <Setter Property="Background" Value="{DynamicResource RegionColor}" />
+          <Setter Property="Background" Value="{ThemeResource RegionColor}" />
         </Style>
         <Style Selector="c|Dialog /template/ Border#PART_Border">
           <Setter Property="Margin" Value="0" />
