--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalance/WalletBalanceMediumTileView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/WalletBalance/WalletBalanceMediumTileView.axaml
@@ -12,13 +12,13 @@
     <StackPanel DockPanel.Dock="Left" Orientation="Horizontal" Spacing="16">
       <Viewbox Height="47" Width="47" DockPanel.Dock="Left">
         <Panel>
-          <Ellipse Stroke="{DynamicResource SystemAccentColor}" StrokeThickness="4"
+          <Ellipse Stroke="{ThemeResource SystemAccentColor}" StrokeThickness="4"
                    Height="115" Width="115" />
-          <Ellipse Stroke="{DynamicResource SystemAccentColor}" StrokeThickness="4" StrokeDashArray="2, 1"
+          <Ellipse Stroke="{ThemeResource SystemAccentColor}" StrokeThickness="4" StrokeDashArray="2, 1"
                    Height="100" Width="100" />
           <PathIcon Data="{StaticResource btc_logo}"
                     Height="50" Width="50"
-                    Foreground="{DynamicResource SystemAccentColor}" />
+                    Foreground="{ThemeResource SystemAccentColor}" />
         </Panel>
       </Viewbox>
       <StackPanel VerticalAlignment="Center">
