--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
@@ -30,7 +30,7 @@
                       DockPanel.Dock="Right"
                       Margin="10 0">
                 <Viewbox Height="20">
-                  <PathIcon Data="{StaticResource entities_edit_regular}" Foreground="{DynamicResource SystemAccentColor}"/>
+                  <PathIcon Data="{StaticResource entities_edit_regular}" Foreground="{ThemeResource SystemAccentColor}"/>
                 </Viewbox>
               </Button>
 
@@ -74,7 +74,7 @@
                       DockPanel.Dock="Right"
                       Margin="10 0">
                 <Viewbox Height="20">
-                  <PathIcon Data="{StaticResource adjust_fee_regular}" Foreground="{DynamicResource SystemAccentColor}" />
+                  <PathIcon Data="{StaticResource adjust_fee_regular}" Foreground="{ThemeResource SystemAccentColor}" />
                 </Viewbox>
               </Button>
 
